rework for chats creation
