# cmd/main.go
@@ -104,17 +104,14 @@ func main() {
 		api.GET("/messages/:message_id", messageHandler.GetMessage)
 		api.DELETE("/messages/:message_id", messageHandler.DeleteMessage)
 		// chat
-		api.GET("/chats", chatHandler.GetUserChats)
 		api.POST("/chats", chatHandler.CreateChat)
-		api.POST("/chats/group", chatHandler.CreateGroupChat)
-		api.GET("/chats/:chat_id", chatHandler.GetUserChats)
+		api.GET("/chats", chatHandler.GetUserChats)
 		api.GET("/chats/:chat_id/messages", messageHandler.GetMessages) //Front issue
 		api.POST("/chats/:chat_id/messages", messageHandler.CreateMessage)
 		api.GET("/chats/:chat_id/members", chatHandler.GetChatMembers)
 		api.POST("/chats/:chat_id/members", chatHandler.AddUsersToChat)
 		api.PATCH("/chats/:chat_id", chatHandler.UpdateChat)
 		api.DELETE("/chats/:chat_id/members/:user_id", chatHandler.RemoveUserFromChat)
-
 		// websocket
 		api.GET("/ws", wsHandler.HandleWebSocket)
 	}
